# meetly-ai-server

./: pyproject.toml
app/: db.py  llm.py  main.py  memory.py  speech.py
app/models/: insights.py  meeting.py  segments.py
app/utils/: llm.py  memory.py
