[project]
name = "speechmatics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "speechmatics-rt>=1.0.0",
    "supabase>=2.30.0",
    "typing-extensions>=4.15.0",
]
